# examples

./: CONTRIBUTING.md  README.md
custom-code-region-ts-oop-example/: FUNCTIONS.md  README.md  RELEASES.md  USAGE.md  jsr.json  package-lock.json  package.json
custom-code-regions-ts/: FUNCTIONS.md  README.md  USAGE.md  jsr.json  openapi.yaml  package-lock.json  package.json
customcode-sdkclasses-java/: README.md  USAGE.md  build.gradle  gradle.properties  openapi.yaml
customcode-sdkclasses-python/: README-PYPI.md  USAGE.md  pyproject.toml
customcode-sdkclasses-typescript/: FUNCTIONS.md  README.md  USAGE.md  jsr.json  package-lock.json  package.json
customcode-sdkclasses-workflow-chaining-typescript/: FUNCTIONS.md  README.md  USAGE.md  jsr.json  package-lock.json  package.json
excel-mcp-server-api/: README.md  app.py  openapi.json  openapi.yaml
framework-fastapi/: README.md  openapi.json  openapi.yaml
framework-flask/: README.md  app.py  models.py  requirements.txt  resources.py  schemas.py  seed.py
framework-springboot/: README.md  openapi.yaml  pom.xml
frameworks-example-fastapi-travel-server/: README.md  main.py  openapi.json  openapi.yaml  pyproject.toml
frameworks-hono-ts/: .gitignore  (+6 more)
google-sheet-mcp-server-api/: README.md  generate_openapi.py  pyproject.toml  requirements.txt  setup.sh  test_app.py
license-api/: README.md  generate_openapi.py  openapi.json  openapi.yaml  pyproject.toml  requirements.txt
rag-mcp-example/: pyproject.toml  requirements.txt  sample_response.json
rag-mcp-example/base/: .env.example  .gitignore  comparison_results.json  generate_openapi.py  openapi.json  openapi.yaml
rag-mcp-example/base/app/: main.py
rag-mcp-example/base/scripts/: build_rag_index.py  query_rag.py
rag-mcp-example/complete/: README.md  pyproject.toml  requirements.txt
rag-mcp-example/complete/app/: main.py
rag-mcp-example/complete/scripts/: compare.py  mcp_server.py
rag-mcp-example/scripts/: compare.py  mcp_server.py  query_rag.py
taskmaster-internal-api/: .gitignore  README.md  app.py  gen.sh  generate_openapi.py  openapi.json  openapi.yaml  pyproject.toml  requirements.txt  setup.sh  test_app.py
taskmaster-internal-api/app/: main.py
taskmaster-internal-api/app/api/: dependencies.py
taskmaster-internal-api/app/core/: config.py  database.py  security.py
taskmaster-internal-api/app/models/: campaign.py  license.py  support_ticket.py  user.py
taskmaster-internal-api/scripts/: init_db.py
taskmaster-internal-api/tests/: test_main.py
(+2586 files in other folders)
