[project]
name = "taskmaster-license"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
    "pytest>=8.4.2",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "uvicorn[standard]>=0.35.0",
]
